<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/league_spartan_bold"
            android:text="@string/quantity"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dialogMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/enter_number_of_accents"
            android:textColor="#444243"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etQuantity"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="#F0F0F0"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/_1"
            android:fontFamily="@font/dm_sans_bold"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_bg"
                android:backgroundTint="#E0E0E0"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/cancel"
                android:textColor="#444243"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:background="@drawable/add_notes_bg"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/set"
                android:textColor="#444023"
                app:backgroundTint="@null" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>