<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/league_spartan_bold"
            android:text="Confirm Order Details"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:fadeScrollbars="false">

            <TextView
                android:id="@+id/tvOrderSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans"
                android:lineSpacingExtra="4dp"
                android:text="@string/order_summary"
                android:textColor="#444243"
                android:textSize="14sp" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_bg"
                android:backgroundTint="#E0E0E0"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/edit"
                android:textColor="#444243"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:background="@drawable/add_notes_bg"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/confirm"
                android:textColor="#444023"
                app:backgroundTint="@null" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>